backporting CSS: Fix scoreboard on Safari

--- a/dojo_theme/static/css/custom.css
+++ b/dojo_theme/static/css/custom.css
@@ -280,6 +280,9 @@ h4 {
     font-weight: bold;
 }
 
+.scoreboard tr {
+    display: flex;
+}
 
 #syllabus ul li {
   list-style-image:url('../img/bullet.png');
